<resources>
    <string name="app_name">Eventos Emerita</string>
    <string name="title">Title</string>
    <string name="text_container">Texto contenedor</string>
    <string name="description">Descripción</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="name">Nombre</string>
    <string name="in_progress">En curso</string>
    <string name="finalized">Finalizado</string>
    <string name="date">Fecha</string>
    <string name="initial_date">Fecha inicio</string>
    <string name="initial_date_param">Fecha inicial: %1$s</string>
    <string name="final_date">Fecha final</string>
    <string name="final_date_param">Fecha final: %1$s</string>
    <string name="address">Dirección</string>
    <string name="comment">Comentar</string>
    <string name="no_comment">Este evento no tiene comentarios</string>
    <string name="all_comment">Ver todos los comentarios ⬇⬇</string>
    <string name="no_events">No se encotró ningún evento</string>
    <string name="featured_events">Eventos destacados</string>
    <string name="new_events">Eventos nuevos</string>
    <string name="notif_title">Recordatorio de evento</string>
    <string name="notif_text">Hoy empieza un evento</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="log_in_guest">Iniciar sesión como invitado</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="sign_up_here">Registrate aquí</string>
    <string name="error_empty_email">El campo del correo electrónico está vacío</string>
    <string name="error_invalid_email">No es un correo válido</string>
    <string name="error_empty_password">El campo de contraseña está vacío</string>
    <string name="error_short_password">La contraseña no puede ser tan corta</string>
    <string name="error_short_name">El nombre es demasiado corto</string>
    <string name="error_invalid_credentials">No existe este email con esta contraseña</string>
    <string name="error_email_exists">Ya existe alguien con ese usuario</string>
    <string name="error_password_mismatch">Los campos no coinciden</string>
    <string name="sign_up">Regístrate</string>
    <string name="have_account">¿Ya tienes cuenta?</string>
    <string name="sign_here">Registrate aquí</string>
    <string name="coment_deleted">Comentario eliminado exitosamente</string>
    <string name="error_coment_deleted">Error deleting comment</string>
    <string name="days_ago">hace %1$d días</string>
    <string name="hours_ago">hace %1$d horas</string>
    <string name="minutes_ago">hace %1$d minutos</string>
    <string name="seconds_ago">hace %1$d segundos</string>
    <string name="following_event">Ya sigues a este evento</string>
    <string name="follow_event">Seguir evento</string>
    <string name="cancel">Cancelar</string>
    <string name="galery">Galeria</string>
    <string name="save">Guardar</string>
    <string name="user_updated">Usuario Actualizado</string>
    <string name="user_update_failed">No se pudo actualizar el usuario</string>
    <string name="recomend_event">Eventos recomendados</string>
    <string name="past_event">Eventos pasados destacados</string>
    <string name="weekend_events">Eventos de este fin de semana</string>
    <string name="notifications">Notificaciones</string>
    <string name="edit">Editar</string>
    <string name="commit_changes">Confirmar cambios</string>
    <string name="sign_off">Cerrar sesión</string>

    <string name="name_coment"> %1$s • </string>


    <string name="category_beneficial">Benéfico</string>
    <string name="category_design">Diseño</string>
    <string name="category_carnival">Carnaval</string>
    <string name="category_music">Música</string>
    <string name="category_conference">Charla-Conferencia</string>
    <string name="category_cinema">Cine</string>
    <string name="category_workshops">Curso-Taller</string>
    <string name="category_emerita_lvdica">Emerita Lvdica</string>
    <string name="category_dance">Danza</string>
    <string name="category_sport">Deporte</string>
    <string name="category_childish">Infantil</string>
    <string name="category_leisure">Ocio</string>
    <string name="category_theater">Teatro</string>
    <string name="category_literature">Literatura</string>
    <string name="categories">Categorías</string>
    <string name="progress">En progreso</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_favorite">Favoritos</string>
    <string name="menu_profile">Perfil</string>

    <string name="needLogFavourite">Para tener una lista de eventos favorito necesitas iniciar sesion!</string>
    <string name="needLog">Para acceder un perfil necesitas iniciar sesion!</string>


</resources>