<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".login.SignUp">

    <TextView
        android:id="@+id/textInstadam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="serif"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/red_Primary"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInstadam"
        android:layout_marginTop="25dp"
        android:hint="@string/name"
        android:inputType="text" />
    <EditText
        android:id="@+id/editTextEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmailRegister"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="8dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/buttonRegis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPassword"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up" />
    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonRegis"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/have_account"/>

    <TextView
        android:id="@+id/buttonTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonRegis"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/textViewRegister"
        android:text="@string/log_in"
        android:textColor="@color/red_Primary"/>


</RelativeLayout>